

2018-09-08  Maxime Doyen

 Made 5.2 release.

 * change: win32: downgraded to gtk+ 3.22.16
 * change: import, you can drop file to import on the main window
 * change: xhb data file format (v1.3)
 * change: optimized XML close tag
 * change: preferences, reorganised the pages and elements
 * change: improved the split dialog with a listview and new layout
 * change: migrated split to GPtrArray
 * change: improved the register selection informations
 * change: relayouted payee and category dialog
 * change: removed most theme icons to keep a consistent interface
 * wish  : #1783826 show average of selection
 * wish  : #1760145 column chart for trend time report
 * wish  : #1759028 filter templates by current account 
 * wish  : #1744612 add Select All/None feature when importing transactions from files
 * wish  : #1738816 import remember last account
 * wish  : #1720538 execute all the rules for assignments 
 * wish  : #1673902 add a visual marker for uncategorized txn
 * wish  : #1673048 option to control the autocomplete of memo
 * wish  : #1667501 update account target window if open
 * wish  : #1661980 show category in subcategory view of budget report
 * wish  : #1623931 import option to case convert txn description
 * wish  : #1610563 enhance the backup system
 * wish  : #1586211 import to always shows date tolerance
 * wish  : #1579494 prevent to import csv invalid date combinations
 * wish  : #1500227 add quick filter for manage payees window
 * wish  : #1225122 split the amount of a transaction into more than 10 categories
 * wish  : #1008629 optional default transaction template for each account
 * wish  :  #969218 include tags in scheduled/template transaction
 * wish  :  #829418 option to help detect duplicated transaction
 * wish  :  #668417 list of all transactions
 * wish  :  #528739 implement import of multiple files
 * bugfix: #1785210 currencies update fail due to fixer.io requires api key