@@ -74,9 +74,9 @@
 
 #define HB_VERSION_MAJOR	5
 #define HB_VERSION_MINOR	2
-#define HB_VERSION_MICRO	0
+#define HB_VERSION_MICRO	1
 
-#define HB_VERSION		"5.2"
+#define HB_VERSION		"5.2.1"
 #define HB_VERSION_NUM	(HB_VERSION_MAJOR*10000) + (HB_VERSION_MINOR*100) + HB_VERSION_MICRO
 
 #define FILE_VERSION		1.3
